[gd_scene load_steps=50 format=3 uid="uid://q722va4o6f7f"]

[ext_resource type="Texture2D" uid="uid://bar8agku77ohu" path="res://assets/sprites/characters/player.png" id="1_fnvij"]
[ext_resource type="Script" path="res://src/PlayerScene/player_scene.gd" id="1_g4nyu"]
[ext_resource type="AudioStream" uid="uid://bbveqra8bdm4w" path="res://assets/sfx/player_hurt.mp3" id="4_6mado"]
[ext_resource type="AudioStream" uid="uid://dx5unx5kluds3" path="res://assets/sfx/sword_slash.mp3" id="5_u3o7a"]
[ext_resource type="AudioStream" uid="uid://d124iocnmudxc" path="res://assets/sfx/fire_skill.mp3" id="6_5kpxk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7wu3l"]
radius = 9.0

[sub_resource type="Animation" id="Animation_0vc2j"]
resource_name = "Attack_Left"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [41, 42, 43, 44, 45]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_i0soq"]
resource_name = "Attack_Right"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [41, 42, 43, 44, 45]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_di6hc"]
resource_name = "Attack_Top"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [47, 48, 49, 50, 51]
}

[sub_resource type="Animation" id="Animation_t1g78"]
resource_name = "Atttack_Bottom"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39]
}

[sub_resource type="Animation" id="Animation_nfm8q"]
resource_name = "Down"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [53, 54, 55, 56, 57]
}

[sub_resource type="Animation" id="Animation_0rqq7"]
resource_name = "Idle_Down"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.694146),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 5]
}

[sub_resource type="Animation" id="Animation_ac3bk"]
resource_name = "Idle_Left"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_1f1qq"]
resource_name = "Idle_Right"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_l5djt"]
resource_name = "Idle_Up"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_ajfe1"]
resource_name = "Movement_Down"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_fus5u"]
resource_name = "Movement_Left"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [25, 26, 27, 28, 29]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_6n8to"]
resource_name = "Movement_Right"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.00325681),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_72hjp"]
resource_name = "Movement_Up"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35]
}

[sub_resource type="Animation" id="Animation_kd35o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4y0eu"]
_data = {
"Attack_Left": SubResource("Animation_0vc2j"),
"Attack_Right": SubResource("Animation_i0soq"),
"Attack_Top": SubResource("Animation_di6hc"),
"Atttack_Bottom": SubResource("Animation_t1g78"),
"Down": SubResource("Animation_nfm8q"),
"Idle_Down": SubResource("Animation_0rqq7"),
"Idle_Left": SubResource("Animation_ac3bk"),
"Idle_Right": SubResource("Animation_1f1qq"),
"Idle_Up": SubResource("Animation_l5djt"),
"Movement_Down": SubResource("Animation_ajfe1"),
"Movement_Left": SubResource("Animation_fus5u"),
"Movement_Right": SubResource("Animation_6n8to"),
"Movement_Up": SubResource("Animation_72hjp"),
"RESET": SubResource("Animation_kd35o")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nflbh"]
animation = &"Attack_Left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jofdw"]
animation = &"Attack_Right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rfmb8"]
animation = &"Atttack_Bottom"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7tmos"]
animation = &"Attack_Top"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_o8mud"]
blend_point_0/node = SubResource("AnimationNodeAnimation_nflbh")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_jofdw")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_rfmb8")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_7tmos")
blend_point_3/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x3i7k"]
animation = &"Idle_Left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xkn3c"]
animation = &"Idle_Right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_whb6a"]
animation = &"Idle_Right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_03mrb"]
animation = &"Idle_Right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yxrg5"]
animation = &"Idle_Down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hko4c"]
animation = &"Idle_Up"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_k1po5"]
blend_point_0/node = SubResource("AnimationNodeAnimation_x3i7k")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_xkn3c")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_whb6a")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_03mrb")
blend_point_3/pos = Vector2(1, 0)
blend_point_4/node = SubResource("AnimationNodeAnimation_yxrg5")
blend_point_4/pos = Vector2(0, 1)
blend_point_5/node = SubResource("AnimationNodeAnimation_hko4c")
blend_point_5/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p1orj"]
animation = &"Movement_Left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_o0hnm"]
animation = &"Movement_Right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5knsu"]
animation = &"Movement_Right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_83807"]
animation = &"Movement_Down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ofltv"]
animation = &"Movement_Up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lgwe7"]
animation = &"Movement_Left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_kmjas"]
blend_point_0/node = SubResource("AnimationNodeAnimation_p1orj")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_o0hnm")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_5knsu")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_83807")
blend_point_3/pos = Vector2(0, 1)
blend_point_4/node = SubResource("AnimationNodeAnimation_ofltv")
blend_point_4/pos = Vector2(0, -1)
blend_point_5/node = SubResource("AnimationNodeAnimation_lgwe7")
blend_point_5/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gpk82"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_11cni"]
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2yklc"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8gca4"]
advance_mode = 2
advance_condition = &"attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5fss5"]
switch_mode = 2
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fvuwb"]
advance_mode = 2
advance_condition = &"attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ldr16"]
switch_mode = 2
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_qqn2q"]
states/Attack/node = SubResource("AnimationNodeBlendSpace2D_o8mud")
states/Attack/position = Vector2(497.333, 50)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_k1po5")
states/Idle/position = Vector2(398.667, 138.148)
states/Start/position = Vector2(158.667, 99.2977)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_kmjas")
states/Walk/position = Vector2(580, 138.428)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_gpk82"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_11cni"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_2yklc"), "Idle", "Attack", SubResource("AnimationNodeStateMachineTransition_8gca4"), "Attack", "Idle", SubResource("AnimationNodeStateMachineTransition_5fss5"), "Walk", "Attack", SubResource("AnimationNodeStateMachineTransition_fvuwb"), "Attack", "Walk", SubResource("AnimationNodeStateMachineTransition_ldr16")]

[sub_resource type="CircleShape2D" id="CircleShape2D_7x5hb"]
radius = 34.0147

[node name="CharacterBody2D" type="CharacterBody2D"]
z_as_relative = false
script = ExtResource("1_g4nyu")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0.999999, -28)
scale = Vector2(2.32292, 2.47917)
texture = ExtResource("1_fnvij")
hframes = 6
vframes = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(0, 6)
shape = SubResource("CircleShape2D_7wu3l")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
audio_max_polyphony = 18
libraries = {
"": SubResource("AnimationLibrary_4y0eu")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4y0eu")
}
tree_root = SubResource("AnimationNodeStateMachine_qqn2q")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/attack = false
parameters/conditions/idle = false
parameters/conditions/is_moving = false
parameters/Attack/blend_position = Vector2(-0.2752, 0.439153)
parameters/Idle/blend_position = Vector2(0.626919, 0.00581396)
parameters/Walk/blend_position = Vector2(0.00118065, -0.52907)

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2(1.00255, 1)
limit_left = 0
limit_top = 0
limit_right = 1150
limit_bottom = 330

[node name="Camera2D2" type="Camera2D" parent="."]
limit_left = -910
limit_top = -712
limit_right = 1900
limit_bottom = 1428

[node name="Camera2D3" type="Camera2D" parent="."]
limit_left = -1021
limit_top = -955
limit_right = 2555
limit_bottom = 1450

[node name="Camera2D4" type="Camera2D" parent="."]
limit_left = 84
limit_top = -205
limit_right = 1442
limit_bottom = 948

[node name="player_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
position = Vector2(1, -8)
shape = SubResource("CircleShape2D_7x5hb")

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 2.0

[node name="skill_cooldown" type="Timer" parent="."]
wait_time = 1.5

[node name="deal_attack_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="regen_timer" type="Timer" parent="."]
autostart = true

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-1, 0)

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(0.913725, 0.00392157, 0, 1)
offset_left = -27.0
offset_top = 29.0
offset_right = 170.0
offset_bottom = 79.0
scale = Vector2(0.3, 0.3)
show_percentage = false

[node name="manabar" type="ProgressBar" parent="."]
modulate = Color(0.231373, 0.141176, 1, 1)
offset_left = -27.0
offset_top = 46.0
offset_right = 170.0
offset_bottom = 69.0
scale = Vector2(0.3, 0.3)
show_percentage = false

[node name="Node2D" type="Node2D" parent="."]

[node name="Marker2D2" type="Marker2D" parent="Node2D"]
position = Vector2(66, -39)

[node name="Marker2D" type="Marker2D" parent="Node2D"]
position = Vector2(56, 0)

[node name="Marker2D3" type="Marker2D" parent="Node2D"]
position = Vector2(67, 34)

[node name="player_hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_6mado")

[node name="sword_slash" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_u3o7a")

[node name="fire_skill" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_5kpxk")

[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="skill_cooldown" to="." method="_on_skill_cooldown_timeout"]
[connection signal="timeout" from="deal_attack_timer" to="." method="_on_deal_attack_timer_timeout"]
[connection signal="timeout" from="regen_timer" to="." method="_on_regen_timer_timeout"]
